--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 header {
 	font-family: 'Roboto', sans-serif;
 	text-align: left;
-	padding: 10px;
+	padding: 30px;
 }
 
 .company-logo {
@@ -27,11 +27,20 @@ header {
 .hero-img {
 }
 
+.in-img {
+	border-radius: 10px;
+	width: 200px;
+}
+
 h1 {
 	color:#3AAFA1;
 	text-align: left;
-	padding-left: 30px;
+	padding-left: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-left: 25px;
 	font-weight: bolder;
+	border-left: 8px solid #3F3F41;
 }
 
 h2 {
@@ -212,8 +221,10 @@ iframe {
 
 .shape {
 	width: 10px;
-	height:50px;
-	background-color: lightgray;
+	height:40px;
+	background-color: #3F3F41;
+	display: inline-block;
+	margin-right: 15px;
 }
 
 .inline {
@@ -252,8 +263,8 @@ iframe {
 footer {
 	font-family: 'Roboto', sans-serif;
 	font-size: 12px;
-	background:lightgray;
-	color: black;
+	background:#3F3F41;
+	color: white;
 	width:100%;
 	text-align: center;
 
