--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,10 +9,10 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 }
 
 .company-logo {
-  width: 50%;
+  width: 35%;
 	position: absolute;
 	left: 0px;
-	padding: 30px;
+	margin: 20px;
 }
 
 .hero-img {
@@ -33,18 +33,18 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 }
 
 h1 {
-  color: #3AAFA1;
+  color: #3F3F41;
   text-align: left;
   padding-left: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-left: 25px;
   font-weight: bolder;
-  border-left: 8px solid #3F3F41;
+  border-left: 8px solid #3AAFA1;
 }
 
 h2 {
-	color: ##3AAFA1;
+	color: #3AAFA1;
   text-align: left;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -54,41 +54,36 @@ h2 {
 
 h3 {
 	color: #3AAFA1;
-	text-align: left;
+	text-align: center;
 	font-weight: bold;
-	font-size: 60px;
+	font-size: 42px;
 	display: block;
-	line-height: 75px;
-	top: 15%;
-	position: absolute;
-	margin-left: 100px;
-	width: 40%;
+	line-height: 50px;
+  margin-bottom: 10px;
+
+  width: 100%;
 }
 
 h4 {
 	color: #00000;
-	text-align: left;
+	text-align: center;
 	font-weight: bold;
 	font-size: 18px;
 	display: block;
 	line-height: 25px;
-	top: 65%;
-	position: absolute;
-	margin-left: 100px;
-	width: 40%;
+  width: 100%;
 }
 
-.app-store-link {
-  position: absolute;
+main a.app-store-link {
   width: 25%;
-  top: 75%;
-  right: 72%;
-	margin-left: 100px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   color: white;
   font-size: 16px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  text-align: left !important;
 }
 
 body {
@@ -103,8 +98,6 @@ p {
 
 main {
   color: #3f3f41;
-  align-content: center;
-  text-align: center;
 }
 
 .description {
@@ -134,6 +127,8 @@ figcaption {
 
 .mobile-blurb {
 display:block;
+margin: 20px;
+text-align: center;
 }
 
 .desktop-blurb {
@@ -250,22 +245,21 @@ footer>p {
 }
 
 .app-store-logo {
-  width: 75%;
+  width: 200px;
 }
 
 .splash {
 	background-color: #3AAFA1;
 	display: block;
 	height: inherit;
-	width: 40%;
+	width: 55%;
 	position: absolute;
 	right: 0px;
 	border-radius: 0px 0px 0px 200px;
-
 }
 
 .hero-banner {
-		height: 600px;
+		height: 400px;
 }
 
 .follow-twitter {
@@ -390,7 +384,66 @@ MEDIA QUERIES!
 
 	.desktop-blurb {
 	display:block;
+  top: 15%;
+  margin: 10px;
+  position: absolute;
+  margin-left: 100px;
+
 	}
+
+  h3 {
+    color: #3AAFA1;
+    text-align: left;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 75px;
+    width: 40%;
+    margin-bottom: 10px;
+  }
+
+  h4 {
+    color: #00000;
+    text-align: left;
+    font-weight: bold;
+    font-size: 20px;
+    display: block;
+    line-height: 25px;
+    width: 40%;
+  }
+
+  main a.app-store-link {
+    width: 25%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: left !important;
+  }
+
+  .splash {
+  	background-color: #3AAFA1;
+  	display: block;
+  	height: inherit;
+  	width: 40%;
+  	position: absolute;
+  	right: 0px;
+  	border-radius: 0px 0px 0px 200px;
+  }
+
+  .hero-banner {
+  		height: 600px;
+  }
+
+  .company-logo {
+    width: 50%;
+  	position: absolute;
+  	left: 0px;
+  	padding: 30px;
+  }
+
 
 }
 
@@ -407,14 +460,5 @@ MEDIA QUERIES!
 	.footer-elements {
 		padding: 30px;
 	}
-
-	.mobile-blurb {
-		display:none;
-
-	}
-	.desktop-blurb {
-	  display:block;
-	}
-
 }
 /* closes 1024px+ */
