--- a/stylesheet.css
+++ b/stylesheet.css
@@ -272,10 +272,31 @@ footer>p {
 .follow-twitter {
 	background-color: #3AAFA1;
 	display: block;
-	height: 300px;
+	height: 500px;
 	width: 100%;
 	border-radius: 0px 200px 0px 0px;
 	margin-top: 50px;
+  text-align: center
+}
+
+.follow-twitter > h5 {
+  color: #FFFFFF;
+  font-size: 42px;
+  padding-left: 5px;
+  padding-top: 120px;
+  padding-bottom: 10px;
+  margin-left: 25px;
+  font-weight: bolder;
+}
+
+
+.follow-twitter > p {
+  color: #FFFFFF;
+  font-size: 18px;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  margin-left: 25px;
 }
 
 
