--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,10 +26,7 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 
 .twitter-follow-button {
 	padding: 20px;
-	position: absolute;
-	right:0px;
-	padding: 20px;
-
+  text-align: center;
 }
 
 h1 {
@@ -127,7 +124,10 @@ figcaption {
 
 .mobile-blurb {
 display:block;
-margin: 20px;
+margin-top: 20px;
+margin-left: 20px;
+margin-right: 20px;
+margin-bottom: 60px;
 text-align: center;
 }
 
@@ -195,11 +195,15 @@ iframe {
   font-weight: bolder;
   color: white;
   margin: 0;
-  align-items: center;
+  padding-left: 0px;
+  text-align: center;
+  width: 100%;
+  display: inline-block;
+
 }
 
 .footer-parent {
-  width: 100%;
+  display: inline-block;
 }
 
 .footer-elements {
@@ -214,9 +218,16 @@ iframe {
   color: white;
 }
 
+.footer-elements>p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .footer-elements>a:hover {
   color: lightgray;
 }
+
+
 
 footer {
   font-family: 'Roboto', sans-serif;
@@ -272,31 +283,31 @@ footer>p {
 .follow-twitter {
 	background-color: #3AAFA1;
 	display: block;
-	height: 500px;
+	height: 450px;
 	width: 100%;
 	border-radius: 0px 200px 0px 0px;
 	margin-top: 50px;
   text-align: center
 }
 
-.follow-twitter > h5 {
+.follow-text > h5 {
   color: #FFFFFF;
   font-size: 42px;
-  padding-left: 5px;
-  padding-top: 120px;
-  padding-bottom: 10px;
-  margin-left: 25px;
+  padding-top: 150px;
+  padding-bottom: 0px;
   font-weight: bolder;
 }
 
+.follow-text {
+}
 
-.follow-twitter > p {
+
+.follow-text > p {
   color: #FFFFFF;
   font-size: 18px;
-  padding-left: 5px;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  margin-left: 25px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  text-align: center;
 }
 
 
@@ -368,13 +379,7 @@ MEDIA QUERIES!
     align-content: center;
     width: 100%;
   }
-	.mobile-blurb {
-	display:block;
-	}
 
-	.desktop-blurb {
-	display:none;
-	}
 
 }
 /* closes 768px+ */
@@ -413,7 +418,9 @@ MEDIA QUERIES!
 	.desktop-blurb {
 	display:block;
   top: 15%;
-  margin: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   position: absolute;
   margin-left: 100px;
 
@@ -463,6 +470,7 @@ MEDIA QUERIES!
 
   .hero-banner {
   		height: 600px;
+      margin-bottom: 80px;
   }
 
   .company-logo {
@@ -477,6 +485,21 @@ MEDIA QUERIES!
   	position: absolute;
     top: 5%;
   	right: 10px;
+  }
+
+  .float-left {
+    position: absolute;
+    left: 10px;
+  }
+
+  .float-right {
+    position: absolute;
+    right: 10px;
+  }
+
+  .float-center {
+    display: inline-block;
+    margin:0 auto;
   }
 
 }
@@ -494,5 +517,6 @@ MEDIA QUERIES!
 	.footer-elements {
 		padding: 30px;
 	}
+
 }
 /* closes 1024px+ */
