--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,11 +8,53 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
   display: block;
 }
 
+.featured-table {
+  width: 100%;
+}
+
+.featured-element {
+  width: 50%;
+  text-align: center;
+}
+
+.row{
+  display:flex;
+  vertical-align: middle
+}
+.row>div{
+  padding:15px;
+}
+.text{
+  width:90%;
+  display: inline-table;
+  vertical-align: middle;
+  line-height: normal;
+}
+.text-content {
+  display:table-cell;
+vertical-align:middle;
+}
+
+.image > image {
+  height:100%;
+}
+
+.container .row:nth-child(2n+1){
+  flex-direction:row-reverse;
+}
+
+
 .company-logo {
-  width: 35%;
+  width: 240px;
 	position: absolute;
 	left: 0px;
 	margin: 20px;
+}
+
+.dots {
+  background-image: radial-gradient(#aeeeef 10%, transparent 20%);
+background-position: 0 0, 25px 25px;
+background-size: 100px 100px;
 }
 
 .hero-img {
@@ -45,20 +87,16 @@ h2 {
   text-align: left;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 20px;
   font-weight: bolder;
 }
 
 h3 {
-	color: #3AAFA1;
-	text-align: center;
-	font-weight: bold;
-	font-size: 42px;
-	display: block;
-	line-height: 50px;
+  color: #3F3F41;
+  text-align: left;
+  font-size: 20px;
+  line-height: 75px;
+  width: 40%;
   margin-bottom: 10px;
-
-  width: 100%;
 }
 
 h4 {
@@ -123,12 +161,13 @@ figcaption {
 }
 
 .mobile-blurb {
-display:block;
-margin-top: 20px;
-margin-left: 20px;
-margin-right: 20px;
-margin-bottom: 60px;
-text-align: center;
+  display:block;
+  margin-top: 20px;
+  margin-left: 120px;
+  margin-right: 20px;
+  margin-bottom: 60px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .desktop-blurb {
@@ -427,10 +466,9 @@ MEDIA QUERIES!
 	}
 
   h3 {
-    color: #3AAFA1;
+    color: #3F3F41;
     text-align: left;
-    font-weight: bold;
-    font-size: 60px;
+    font-size: 20px;
     line-height: 75px;
     width: 40%;
     margin-bottom: 10px;
