--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,13 +8,70 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
   display: block;
 }
 
+.header-container {
+  background-color: #C4E7E3;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width:100%;
+  text-align: center
+}
+
+.footer-container {
+  background-color: #C4E7E3;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width:100%;
+  text-align: center
+}
+
+p {
+   text-align: center;
+   color: #3F3F41;
+   font-size: 24px;
+   font-weight: 100;
+}
+
+.feature-container {
+  background-color: #E9F6F5;
+  width:100%;
+}
+
+.upcoming-container {
+  background-color: #FFFFFF;
+  width:100%;
+}
+
 .featured-table {
-  width: 100%;
+  max-width: 940px;
+  margin-left: auto;
+margin-right: auto;
+}
+
+.footer-barrier {
+  max-width: 600px;
+  margin-left: auto;
+margin-right: auto;
 }
 
 .featured-element {
   width: 50%;
-  text-align: center;
+}
+
+.featured-right {
+  text-align: right;
+}
+
+.featured-left {
+  text-align: left;
+}
+
+.divider {
+  display: block;
+  width: 120px;
+}
+
+.featured-image {
+  width: 50%;
 }
 
 .row{
@@ -25,27 +82,53 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
   padding:15px;
 }
 .text{
-  width:90%;
+  width:80%;
   display: inline-table;
   vertical-align: middle;
   line-height: normal;
 }
+
 .text-content {
   display:table-cell;
 vertical-align:middle;
 }
 
-.image > image {
-  height:100%;
+.text-content > p {
+  text-align: left;
 }
 
-.container .row:nth-child(2n+1){
-  flex-direction:row-reverse;
+.footer-elements > p {
+  color: #FFFFFF;
+    font-size: 14px;
+}
+
+.image > img {
+  width:292px;
+}
+
+
+.upcoming-image > img {
+  width:100%;
+}
+
+.featured-table > tbody > tr > td {
+  padding-bottom: 75px;
+  padding-top: 75px;
+}
+
+body {
+  text-align: center;
+}
+
+.container {
+  max-width: 1440px;
+  margin-left: auto;
+margin-right: auto;
 }
 
 
 .company-logo {
-  width: 240px;
+  width: 220px;
 	position: absolute;
 	left: 0px;
 	margin: 20px;
@@ -72,31 +155,28 @@ background-size: 100px 100px;
 }
 
 h1 {
-  color: #3F3F41;
-  text-align: left;
-  padding-left: 5px;
+  color: #083A6A;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 25px;
-  font-weight: bolder;
-  border-left: 8px solid #3AAFA1;
+  font-size: 64px;
+  font-weight: lighter;
+  letter-spacing: 18px;
 }
 
 h2 {
-	color: #3AAFA1;
+	color: #3F3F41;
   text-align: left;
-  padding-top: 10px;
   padding-bottom: 10px;
-  font-weight: bolder;
+  font-size: 42px;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  width: 400px;
 }
 
 h3 {
   color: #3F3F41;
   text-align: left;
-  font-size: 20px;
-  line-height: 75px;
-  width: 40%;
-  margin-bottom: 10px;
+  font-size: 24px;
 }
 
 h4 {
@@ -125,10 +205,6 @@ body {
   font-size: 1em;
   line-height: 1.4em;
   font-family: 'Roboto', sans-serif;
-}
-
-p {
-	text-align: left;
 }
 
 main {
@@ -271,11 +347,12 @@ iframe {
 footer {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
-  background: #3F3F41;
+  background: #C4E7E3;
   color: white;
   width: 100%;
   text-align: center;
-	padding: 20px;
+	padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 footer>p {
@@ -320,24 +397,25 @@ footer>p {
 }
 
 .follow-twitter {
-	background-color: #3AAFA1;
+	background-color: #C4E7E3;
 	display: block;
 	height: 450px;
 	width: 100%;
-	border-radius: 0px 200px 0px 0px;
 	margin-top: 50px;
   text-align: center
 }
 
-.follow-text > h5 {
-  color: #FFFFFF;
-  font-size: 42px;
-  padding-top: 150px;
+h5 {
+  color: #3F3F41;
+  font-size: 48px;
   padding-bottom: 0px;
   font-weight: bolder;
+  line-height: 60px;
 }
 
 .follow-text {
+  text-align: center;
+
 }
 
 
@@ -413,13 +491,6 @@ MEDIA QUERIES!
   main, nav {
     float: none;
   }
-
-  img {
-    align-content: center;
-    width: 100%;
-  }
-
-
 }
 /* closes 768px+ */
 
@@ -446,10 +517,6 @@ MEDIA QUERIES!
     float: none;
   }
 
-  img {
-    align-content: center;
-    width: 100%;
-  }
 	.mobile-blurb {
 	display:none;
 	}
@@ -469,8 +536,6 @@ MEDIA QUERIES!
     color: #3F3F41;
     text-align: left;
     font-size: 20px;
-    line-height: 75px;
-    width: 40%;
     margin-bottom: 10px;
   }
 
@@ -544,9 +609,6 @@ MEDIA QUERIES!
 
 /* CSS for desktop sizes.*/
 @media all and (min-width: 1024px) {
-  img {
-    width: 100%;
-  }
 
   .company-logo {
     width: 20%;
