--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 .header-container {
   background-color: #C4E7E3;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   width:100%;
   text-align: center
 }
@@ -27,11 +27,16 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 p {
    text-align: center;
    color: #3F3F41;
-   font-size: 24px;
+   font-size: 18px;
    font-weight: 100;
 }
 
 .feature-container {
+  background-color: #E9F6F5;
+  width:100%;
+}
+
+.feature-container-mobile {
   background-color: #E9F6F5;
   width:100%;
 }
@@ -41,10 +46,14 @@ p {
   width:100%;
 }
 
+.upcoming-container-mobile {
+  background-color: #FFFFFF;
+  width:100%;
+}
+
 .featured-table {
-  max-width: 940px;
-  margin-left: auto;
-margin-right: auto;
+  width: 100%;
+  padding-top:40px;
 }
 
 .footer-barrier {
@@ -103,17 +112,17 @@ vertical-align:middle;
 }
 
 .image > img {
-  width:292px;
+  width:50%;
 }
 
 
 .upcoming-image > img {
-  width:100%;
+  width:90%;
 }
 
 .featured-table > tbody > tr > td {
-  padding-bottom: 75px;
-  padding-top: 75px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 body {
@@ -128,10 +137,10 @@ margin-right: auto;
 
 
 .company-logo {
-  width: 220px;
-	position: absolute;
-	left: 0px;
-	margin: 20px;
+  width: 150px;
+  position: absolute;
+  left: 0px;
+  padding: 20px;
 }
 
 .dots {
@@ -158,7 +167,7 @@ h1 {
   color: #083A6A;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-size: 64px;
+  font-size: 48px;
   font-weight: lighter;
   letter-spacing: 18px;
 }
@@ -166,17 +175,17 @@ h1 {
 h2 {
 	color: #3F3F41;
   text-align: left;
-  padding-bottom: 10px;
-  font-size: 42px;
+  padding-bottom: 2px;
+  font-size: 36px;
   font-weight: lighter;
   letter-spacing: 2px;
-  width: 400px;
+  width: 80%;
 }
 
 h3 {
   color: #3F3F41;
   text-align: left;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 h4 {
@@ -372,6 +381,7 @@ footer>p {
 }
 
 .app-store-logo {
+  padding-top: 24px;
   width: 200px;
 }
 
@@ -407,10 +417,12 @@ footer>p {
 
 h5 {
   color: #3F3F41;
-  font-size: 48px;
+  font-size: 36px;
   padding-bottom: 0px;
   font-weight: bolder;
   line-height: 60px;
+  padding-left: 20px;
+padding-right: 20px;
 }
 
 .follow-text {
@@ -427,44 +439,90 @@ h5 {
   text-align: center;
 }
 
+.feature-container {
+  display: none;
+}
+.feature-container-mobile {
+  display: block;
+}
+
+.upcoming-container {
+  display: none;
+}
+.upcoming-container-mobile {
+  display: block;
+}
+
+.lofive-logo {
+  width: 60%;
+}
+
 
 /* ========================================
 MEDIA QUERIES!
 ======================================== */
 /* CSS for tablet sizes.*/
 @media all and (min-width: 768px) {
-  .general-img {
-    width: 500px;
-    padding: 0px;
+  .feature-container {
+    display: block;
+  }
+  .feature-container-mobile {
+    display: none;
   }
 
-  .research-img {
-    width: 500px;
+  .upcoming-container {
+    display: block;
+  }
+  .upcoming-container-mobile {
+    display: none;
   }
 
-  .company-logo {
-    width: 25%;
+  .upcoming-image > img {
+    width:100%;
   }
 
-	.footer-elements {
-	  padding: 30px;
-	}
-
-  nav {
-    width: 200px;
-    float: left;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+  .featured-table {
+    padding-top:0px;
+    max-width: 940px;
+    margin-left: auto;
+  margin-right: auto;
   }
 
-  main, nav {
-    float: none;
+  .image > img {
+    width:292px;
   }
 
-  .description {
-    margin-left: 100px;
-    margin-right: 100px;
+  h2 {
+    width: 400px;
+    font-size: 42px;
+    padding-bottom: 10px;
+  }
+
+  .lofive-logo {
+    width: 336px;
+  }
+
+  h1 {
+    font-size: 64px;
+  }
+
+  p {
+     font-size: 24px;
+  }
+
+  .featured-table > tbody > tr > td {
+    padding-bottom: 75px;
+    padding-top: 75px;
+  }
+
+  .header-container {
+    padding-bottom: 100px;
+  }
+
+  h5 {
+    font-size: 48px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
 /* closes 768px+ */
@@ -535,7 +593,7 @@ MEDIA QUERIES!
   h3 {
     color: #3F3F41;
     text-align: left;
-    font-size: 20px;
+    font-size: 24px;
     margin-bottom: 10px;
   }
 
@@ -577,7 +635,7 @@ MEDIA QUERIES!
   }
 
   .company-logo {
-    width: 50%;
+    width: 220px;
   	position: absolute;
   	left: 0px;
   	padding: 30px;
