shadows and footers

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,11 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
   display: block;
 }
 
+.image-shadow {
+  -webkit-filter: drop-shadow(5px 10px 18px #777);
+  filter: drop-shadow(7px 10px 18px #777);
+}
+
 .header-container {
   background-color: #C4E7E3;
   padding-top: 100px;
@@ -340,6 +345,7 @@ iframe {
 .footer-elements>a {
   text-decoration: none;
   color: white;
+  margin-left: 10px;
 }
 
 .footer-elements>p {
