--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,8 @@ figcaption, footer, header, nav, main, aside, section, canvas, iframe {
 }
 
 .image-shadow {
-  -webkit-filter: drop-shadow(5px 10px 18px #777);
-  filter: drop-shadow(7px 10px 18px #777);
+  -webkit-filter: drop-shadow(7px 10px 30px #888);
+  filter: drop-shadow(7px 10px 18px #888);
 }
 
 .header-container {
@@ -178,8 +178,9 @@ h1 {
 }
 
 h2 {
-	color: #3F3F41;
+	color: #083A6A;
   text-align: left;
+  margin-top: 0px;
   padding-bottom: 2px;
   font-size: 36px;
   font-weight: lighter;
@@ -190,7 +191,7 @@ h2 {
 h3 {
   color: #3F3F41;
   text-align: left;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 h4 {
@@ -599,7 +600,7 @@ MEDIA QUERIES!
   h3 {
     color: #3F3F41;
     text-align: left;
-    font-size: 24px;
+    font-size: 18px;
     margin-bottom: 10px;
   }
 
